# ffmpeg-experiment

./: .gitignore  .gitmodules  .prettierignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml
misc/: README.md  ffmpeg-configure.sh  test.webm
misc/.vscode-example/: c_cpp_properties.json
src/: demo.js  emscripten-00-demo.js  emscripten-00.cpp  emscripten-01-demo.js  emscripten-01.cpp  emscripten-02-demo.ts  emscripten-03-demo.ts  emscripten-utils.js  example-00.cpp  example-02.cpp  example-03.cpp  example-04.cpp  example-05.cpp  example.cpp  opusenc-picture-test.cpp  opusenc-picture.hpp  utils-ffmpeg.hpp  utils.hpp
